# NovaEdit

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
clients/nvim/: README.md
clients/nvim/lua/novaedit/: init.lua
clients/vscode/: .vscodeignore  README.md  package.json
clients/vscode/src/: extension.ts
data/: README.md
data/python/processed/: sample_edits.jsonl
docker/: Dockerfile
docs/: CNAME  index.md  package-lock.json  package.json  plan.md
docs/.vitepress/: config.mts
docs/api/: server.md
docs/guide/: data.md  quickstart.md
eval/: run_eval_bugfix.py  run_eval_regression.py
eval/datasets/: README.md  sample_bugfix.jsonl
examples/: buggy.py
model/: tokenizer-sample.json
model/config/: novaedit-base.yaml  novaedit-small.yaml
scripts/: build_edit_dataset.py  generate_synthetic_bugs.py  mine_git_diffs.py  prepare_python_data.sh  push_to_hub.py  split_dataset.py  train_tokenizer.py
src/novaedit/clients/cli/: novaedit_cli.py
src/novaedit/languages/: __init__.py
src/novaedit/languages/javascript/: __init__.py  adapter.py
src/novaedit/languages/python/: __init__.py  adapter.py  diagnostics.py  patch_apply.py
src/novaedit/model/: __init__.py  config.py  modeling_novaedit.py  tokenization_novaedit.py
src/novaedit/server/: __init__.py  api_schemas.py  main.py
tests/: test_model_heuristics.py  test_patch_apply.py  test_server_api.py
trainer/: dataset_edit.py  pretrain.py  sft_edit.py  utils_dataset.py  utils_loss.py
