[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novaedit"
version = "0.1.0"
description = "NovaEdit: code-edit–first model, server, and tooling."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "GustyCube}]
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn>=0.23",
  "typer[all]>=0.12",
  "tokenizers>=0.15",
  "transformers>=4.38",
  "huggingface_hub>=0.20",
  "pyyaml>=6.0",
  "rich>=13.7",
  "httpx>=0.25",
]

[project.optional-dependencies]
train = [
  "torch>=2.1",
  "datasets>=2.16",
  "evaluate>=0.4",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/example/novaedit"
Issues = "https://github.com/example/novaedit/issues"

[project.scripts]
novaedit = "novaedit.clients.cli.novaedit_cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/novaedit"]

[tool.ruff]
line-length = 100
target-version = "py310"
